--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
@@ -19,30 +19,52 @@
     <canvas id="myCanvas" width="480" height="320"></canvas>
 
     <script>
-      const canvas = document.getElementById("myCanvas");
-      const ctx = canvas.getContext("2d");
+      var canvas = document.getElementById("myCanvas");
+      var ctx = canvas.getContext("2d");
+      var x = canvas.width / 2;
+      var y = canvas.height - 30;
+      var dx = 2;
+      var dy = -2;
+      const ballRadius = 10;
+      const paddleHeight = 10;
+      const paddleWidth = 75;
+      let paddleX = (canvas.width - paddleWidth) / 2;
 
-      ctx.beginPath();
-      ctx.rect(20, 40, 50, 50);
-      ctx.fillStyle = "#FF0000";
-      ctx.fill();
-      ctx.closePath();
+      function drawBall() {
+        ctx.beginPath();
+        ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+      }
+      function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(
+          paddleX,
+          canvas.height - paddleHeight,
+          paddleWidth,
+          paddleHeight
+        );
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+      }
 
-      ctx.beginPath();
-      ctx.arc(240, 160, 20, 0, Math.PI * 2, false);
-      ctx.fillStyle = "green";
-      ctx.fill();
-      ctx.closePath();
+      function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBall();
+        x += dx;
+        y += dy;
 
-      ctx.beginPath();
-      ctx.rect(160, 10, 100, 40);
-      ctx.strokeStyle = "rgb(0 0 255 / 50%)";
-      ctx.stroke();
-      ctx.closePath();
+        if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+          dx = -dx;
+        }
+        if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+          dy = -dy;
+        }
+      }
 
-
-
-
+      setInterval(draw, 10);
     </script>
   </body>
 </html>
